# git-pr-linear-merge

./: .gitignore  LICENSE  Pipfile  README.md  git-pr.py  requirements.txt  setup.cfg
src/git_pr_linear_merge/: auth.py  cfg.py  logger.py  main.py
tests/: TESTING.md
