[metadata]
name = git-pr-linear-merge
version = 1.0.1
author = Waldo Bronchart
author_email = wbronchart@gmail.com
description = A command line utility to list and merge GitHub pull requests while maintaining linear history
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waldobronchart/git-pr-linear-merge
project_urls =
    Source = https://github.com/waldobronchart/git-pr-linear-merge
    Bug Tracker = https://github.com/waldobronchart/git-pr-linear-merge/issues
license = MIT
license_files = LICENSE
keywords = github, pull request, linear merge, linear history, semi-linear merge
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Version Control :: Git

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    GitPython==3.1.14
    PyGithub==1.54.1
    tabulate==0.8.9
    requests==2.25.1
    colorama==0.4.4

[options.entry_points]
console_scripts =
    git-pr=git_pr_linear_merge.main:run

[options.packages.find]
where = src